Update tạo bảng nâng cao

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- Bàn cờ -->
     <table class="table" border="">
         <tr>
             <td></td>
@@ -90,11 +91,12 @@
             <td></td>
         </tr>
     </table>
+    <!-- Lịch năm -->
     <div class="calendar">
         <h1>Lịch tháng 10 - October</h1>
        <table border="">
         <tr>
-            <th class="bg-red">C.Nhật</th>
+            <th class="bg-red padding-8px">C.Nhật</th>
             <th class="bg-orange">T.Hai</th>
             <th class="bg-orange">T.Ba</th>
             <th class="bg-orange">T.Tư</th>
@@ -103,7 +105,7 @@
             <th class="bg-blue">T.Bảy</th>
         </tr>
         <tr class="no-boder">
-            <th class="text-red">Sun</th>
+            <th class="text-red padding-8px">Sun</th>
             <th>Mon</th>
             <th>Tue</th>
             <th>Wed</th>
