Update bài tập tạo bảng nâng cao

--- a/index.html
+++ b/index.html
@@ -9,89 +9,108 @@
 </head>
 <body>
     <!-- Bàn cờ -->
-    <table class="table" border="">
+    <table class="table" >
         <tr>
-            <td></td>
+            <td  class="number"></td>
+            <td class="number"><p>1</p></td>
+            <td class="number"><p>2</p></td>
+            <td class="number"><p>3</p></td>
+            <td class="number"><p>4</p></td>
+            <td class="number"><p>5</p></td>
+            <td class="number"><p>6</p></td>
+            <td class="number"><p>7</p></td>
+            <td class="number"><p>8</p></td>
+        </tr>
+        <tr>
+            <td class="col"><p>A</p></td>
+            <td class="bg-white"></td>
             <td class="bg-black"></td>
-            <td></td>
+            <td class="bg-white"></td>
             <td class="bg-black"></td>
-            <td></td>
+            <td class="bg-white"></td>
             <td class="bg-black"></td>
-            <td></td>
+            <td class="bg-white"></td>
             <td class="bg-black"></td>
         </tr>
         <tr>
+            <td class="col"><p>B</p></td>
             <td class="bg-black"></td>
-            <td></td>
+            <td class="bg-white"></td>
             <td class="bg-black"></td>
-            <td></td>
+            <td class="bg-white"></td>
             <td class="bg-black"></td>
-            <td></td>
+            <td class="bg-white"></td>
             <td class="bg-black"></td>
-            <td></td>
+            <td class="bg-white"></td>
         </tr>
         <tr>
-            <td></td>
+            <td class="col"><p>C</p></td>
+            <td class="bg-white"></td>
             <td class="bg-black"></td>
-            <td></td>
+            <td class="bg-white"></td>
             <td class="bg-black"></td>
-            <td></td>
+            <td class="bg-white"></td>
             <td class="bg-black"></td>
-            <td></td>
-            <td class="bg-black"></td>
-        </tr>
-        <tr>
-            <td class="bg-black"></td>
-            <td></td>
-            <td class="bg-black"></td>
-            <td></td>
-            <td class="bg-black"></td>
-            <td></td>
-            <td class="bg-black"></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
-            <td class="bg-black"></td>
-            <td></td>
-            <td class="bg-black"></td>
-            <td></td>
-            <td class="bg-black"></td>
-            <td></td>
+            <td class="bg-white"></td>
             <td class="bg-black"></td>
         </tr>
         <tr>
+            <td class="col"><p>D</p></td>
             <td class="bg-black"></td>
-            <td></td>
+            <td class="bg-white"></td>
             <td class="bg-black"></td>
-            <td></td>
+            <td class="bg-white"></td>
             <td class="bg-black"></td>
-            <td></td>
+            <td class="bg-white"></td>
             <td class="bg-black"></td>
-            <td></td>
+            <td class="bg-white"></td>
         </tr>
         <tr>
-            <td></td>
+            <td class="col"><p>E</p></td>
+            <td class="bg-white"></td>
             <td class="bg-black"></td>
-            <td></td>
+            <td class="bg-white"></td>
             <td class="bg-black"></td>
-            <td></td>
+            <td class="bg-white"></td>
             <td class="bg-black"></td>
-            <td></td>
+            <td class="bg-white"></td>
             <td class="bg-black"></td>
         </tr>
         <tr>
+            <td class="col"><p>F</p></td>
             <td class="bg-black"></td>
-            <td></td>
+            <td class="bg-white"></td>
             <td class="bg-black"></td>
-            <td></td>
+            <td class="bg-white"></td>
             <td class="bg-black"></td>
-            <td></td>
+            <td class="bg-white"></td>
             <td class="bg-black"></td>
-            <td></td>
+            <td class="bg-white"> </td>
+        </tr>
+        <tr>
+            <td class="col"><p>G</p></td>
+            <td class="bg-white"></td>
+            <td class="bg-black"></td>
+            <td class="bg-white"></td>
+            <td class="bg-black"></td>
+            <td class="bg-white"></td>
+            <td class="bg-black"></td>
+            <td class="bg-white"></td>
+            <td class="bg-black"></td>
+        </tr>
+        <tr>
+            <td class="col"><p>H</p></td>
+            <td class="bg-black"></td>
+            <td class="bg-white"></td>
+            <td class="bg-black"></td>
+            <td class="bg-white"></td>
+            <td class="bg-black"></td>
+            <td class="bg-white"></td>
+            <td class="bg-black"></td>
+            <td class="bg-white"></td>
         </tr>
     </table>
-    <!-- Lịch năm -->
+    <!-- Lịch tháng -->
     <div class="calendar">
         <h1>Lịch tháng 10 - October</h1>
        <table border="">
